css/index.css
    * {
        box-sizing: border-box;
        margin-bottom: 50px;
        clear: both;
    }
    
    .navigationBar {
        width: 100%;
        margin: auto;
        font-family: 'Fira Sans', Helvetica, sans-serif;
    }
    
    .navbar {
        background-image: url("https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
    }
    
    .navbar-brand {
        margin: 0;
        padding: 24px 16px 24px 16px;
        border-radius: 10px;
        color: white;
        font-family: 'Do Hyeon', sans-serif;
        font-size: x-large;
    }
    
    .navbar-nav .nav-item .navBtns {
        color: white;
        font-family: 'Do Hyeon', sans-serif;
        font-size: larger;
        background-color: #3137f5;
        border-radius: 20px;
        margin: 5px;
    }
    
    .navbar-nav .nav-item .navBtns:hover {
        color: #7e7f91;
    }
    
    .navbar-brand:hover {
        color: #7e7f91;
    }
    
    a {
        font-weight: bolder;
    }
    
    .container {
        margin-top: 30px;
    }
    
    .card {
        box-shadow: 5px 10px #888888;
        margin: 30px;
        border-radius: 20px;
    }
    
    .aboutMe {
        margin: 0 auto;
        margin-bottom: 24px;
        float: none;
        padding: 20px;
    }
    
    #aboutMeCard {
        margin: 0 auto;
        float: none;
        margin-top: 20px;
        margin-bottom: 10px;
    }
    
    .card-title {
        font-family: 'Shadows Into Light', Helvetica, sans-serif;
        font-size: 36px;
        font-weight: bolder;
    }
    
    img {
        width: 213x;
        height: 200px;
        border-radius: 20px;
    }
    
    p {
        font-size: 16px;
        font-family: Arial, Helvetica, sans-serif;
    }
    
    .headshot {
        clear: both;
        margin-bottom: 20px;
    }
    
    footer {
        position: fixed;
        width: 100%;
        bottom: 0px;
        padding: 10px;
        margin-top: 24px;
        text-align: center;
        background-image: url("https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        color: white;
    }
    
    .personalDetails {
        margin-top: 10px;
        margin-left: 20px;
    }
    
    #gitHubLogo {
        width: 20px;
        height: 20px;
    }
    
    #linkedInLogo {
        width: 20px;
        height: 20px;
    }
    
    #contactContainer {
        margin: 0 auto;
        float: none;
        margin-bottom: 10px;
    }
    
    #contactMe {
        margin-top: 20px;
    }
    
    .contactForm {
        margin: 20px;
    }
    
    @media screen and (max-width: 576px) {
        .wrapper {
            width: 100%;
        }
        .container {
            width: 100%;
            margin: 0;
        }
        .navbar-brand {
            margin-left: 25%;
        }
        .navbar-toggler-icon {
            color: white;
        }
        .personalDetails {
            margin: 0 auto;
            margin-top: 10px;
            text-align: center;
        }
        .navbar-brand {
            margin: 0 auto;
            text-align: center;
        }
        .navbar-nav .nav-item .navBtns {
            text-align: center;
            border: thick solid white;
        }
    }

